# minecraft-rust

./: Cargo.toml  NOTES.md  README.md  build.rs  imgui.ini
manimations/media/videos/1080p60/partial_movie_files/CheckHealthDemo/: partial_movie_file_list.txt
manimations/media/videos/main/480p15/partial_movie_files/CreateCircle/: partial_movie_file_list.txt
src/: block.rs  camera.rs  imgui_renderer.rs  lib.rs  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs  utils.rs  world.rs
