[package]
name = "minecraft-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bytemuck = { version = "1.14.3", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
derive_more = {"version" = "2.0.1", "features" = ["full"]}
env_logger = "0.11.3"
image = { version = "0.25.0", default-features = false, features = ["png", "jpeg"] }
imgui = "0.12.0"
imgui-winit-support = "0.13.0"
instant = "0.1.12"
log = "0.4.21"
noise = { version = "0.8.2", features = ["images"] }
num-format = "0.4.4"
paste = "1.0.15"
pollster = "0.3.0"
rayon = "1.10.0"
smallvec = "1.14.0"
tobj = { version = "4.0.1", features = ["async"] }
tokio = { version = "1.43.0", features = ["full"] }
wgpu = "0.19.3"
winit = { version = "0.30", features = ["rwh_05"]}

[build-dependencies]
anyhow = "1.0.81"
fs_extra = "1.3.0"
glob = "0.3.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = "0.1.12"
reqwest = "0.11.26"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}

[profile.release]
debug = 1

[profile.dev]
debug = 1
